# data-science-project-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.es.md  README.md  codecov.yml  cookiecutter.json  index.html  mkdocs.yml  pull_request_template.md  pyproject.toml  sitemap.xml
.code_quality/: bandit.yaml  mypy.ini  ruff.toml
.github/: dependabot.yml  labels.yml  pr-labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/python-poetry-env/: action.yml
.github/workflows/: automerge.yml  ci.yml  dependabot_automerge.yml  dependencies.yml  dependency-review.yml  docs.yml  labels.yml  pr-labeler.yml  pre-commit_autoupdate.yml  release-drafter.yml  test.yml  update_template_deps.yml
data_schema/: index.html
directory_hierarchy/: index.html
docs/: data_schema.es.md  data_schema.md  directory_hierarchy.es.md  directory_hierarchy.md  index.es.md  index.md  local_setup.es.md  local_setup.md  pre-commit.es.md  pre-commit.md  setup_tokens.es.md  setup_tokens.md  vscode.es.md  vscode.md
docs/github_actions/: automerge.es.md  automerge.md  ci.es.md  ci.md  dependency_review.es.md  dependency_review.md  docs.es.md  docs.md  gh_action_pre-commit-autoupdate.es.md  gh_action_pre-commit-autoupdate.md  labels.es.md  labels.md
es/: index.html
es/data_schema/: index.html
es/directory_hierarchy/: index.html
es/github_actions/automerge/: index.html
es/github_actions/ci/: index.html
es/github_actions/dependency_review/: index.html
es/github_actions/docs/: index.html
es/github_actions/gh_action_pre-commit-autoupdate/: index.html
es/github_actions/labels/: index.html
es/local_setup/: index.html
es/pre-commit/: index.html
es/setup_tokens/: index.html
es/vscode/: index.html
github_actions/automerge/: index.html
github_actions/ci/: index.html
github_actions/dependency_review/: index.html
github_actions/docs/: index.html
github_actions/gh_action_pre-commit-autoupdate/: index.html
github_actions/labels/: index.html
hooks/: post_gen_project.py
local_setup/: index.html
pre-commit/: index.html
scripts/: update_template_deps.py
search/: search_index.json
setup_tokens/: index.html
tests/: test_create_template.py  test_create_template_no_coverage.py  test_create_template_no_mkdocs.py  test_create_template_python_version.py
vscode/: index.html
{{cookiecutter.repo_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pull_request_template.md  pyproject.toml
{{cookiecutter.repo_name}}/.code_quality/: bandit.yaml  ruff.toml
{{cookiecutter.repo_name}}/.github/: dependabot.yml  labels.yml  pull_request_template.md
{{cookiecutter.repo_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{cookiecutter.repo_name}}/.github/actions/python-poetry-env/: action.yml
{{cookiecutter.repo_name}}/.github/workflows/: automerge.yml  ci.yml  dependencies.yml  docs.yml  labels.yml  pre-commit_autoupdate.yml  test.yml
{{cookiecutter.repo_name}}/conf/: __init__.py
{{cookiecutter.repo_name}}/data/: README.md
{{cookiecutter.repo_name}}/notebooks/: README.md  notebook_template.ipynb
{{cookiecutter.repo_name}}/src/: README.md  tmp_mock.py
{{cookiecutter.repo_name}}/src/libs/: dir.txt
{{cookiecutter.repo_name}}/tests/: test_mock.py
