[project]
name = "data-science-project-template"
version = "1.0.1"
description = "A modern template for data science projects with all the necessary tools for experiment, development, testing, and deployment. From notebooks to production."
authors = [
    {name = "Jose R. Zapata", email = "https://joserzapata.github.io/"},
]
requires-python = ">=3.10"
keywords = [
    "data-science",
    "cookiecutter",
    "poetry",
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
homepage = "https://joserzapata.github.io/"
repository = "https://github.com/JoseRZapata/data-science-project-template"
documentation = "https://joserzapata.github.io/data-science-project-template/"

[dependency-groups]
dev = []
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions>=10.14.3",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
