[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>",
]
readme = "README.md"
documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.repo_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.compatible_python_versions }}"
hydra-core = "^1.1.1"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

# Standardized Developer Workflow Orchestration
cruft = {extras = ["pyproject"], version = "^2.15.0"} # Automated Cookiecutter template synchronization

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.7"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pymdown-extensions = "^10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
testpaths = ["tests"]
