[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>",
]
requires-python = "^{{ cookiecutter.compatible_python_versions }}"
readme = "README.md"

dependencies = [
    "hydra-core>=1.1.1",
]

[project.urls]
documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.repo_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"


[dependency-groups]
dev = [
    "pre-commit>=4.0.1", # Code linting and formatting
    "pytest>=8.3.4", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.0.0",
    "cruft[pyproject]>=2.15.0",# Automated Cookiecutter template synchronization
]

#{% if cookiecutter.mkdocs %}
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "pymdown-extensions>=10.13",
]
#{% endif %}

[tool.uv]
package = false
default-groups = [
    "dev",
#{% if cookiecutter.mkdocs %}
    "docs",
#{% endif %}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
